# NetServe

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config.ini  main.c  test_config_CMakeLists.txt  test_logger_CMakeLists.txt
config/: config.ini  test_config.ini
doc/: README copy.md  README_CMAKE.md  README_CONFIG.md  README_CONFIG_COMMENTS.md  README_DIRECTORY_STRUCTURE.md  README_HTTP.md  README_JSON.md  README_LOGGER_MULTITHREAD.md  README_MEMORY_POOL.md  README_MULTITHREADING.md  README_PORT_CONFLICT.md  README_STRUCTURE.md
modules/: config_module.c  config_module.h  enhanced_network_module.c  enhanced_network_module.h  logger_module.c  logger_module.h  memory_pool_module.c  module_manager.c  network_module.c  threadpool_module.c  threadpool_module.h
shell/: check_ports.sh
src/: main.c
src/config/: config_module.c
src/db/: database_module.c  database_module.h
src/http/: http_module.c  http_module.h  http_routes.c  http_routes.h
src/ipc/: README_MODULAR.md  ipc_example.c  ipc_module.c  ipc_module.h  ipc_msgqueue.c  ipc_msgqueue.h  ipc_mutex.c  ipc_mutex.h  ipc_pipe.c  ipc_pipe.h  ipc_semaphore.c  ipc_semaphore.h  ipc_shmem.c  ipc_shmem.h  ipc_socket.c  ipc_socket.h  ipc_unified.c  ipc_unified.h
src/json/: json_parser_module.c
src/log/: logger_module.c  logger_module.h
src/memory/: memory_pool_module.c
src/modules/: config_module.c  enhanced_network_module.c  json_parser_module.h  memory_pool_module.h  module_manager.c  module_manager.h  network_module.c
src/net/: enhanced_network_module.c  network_module.c  network_module.h
src/thread/: thread_comm_module.c  threadpool_module.c
src/thread_comm/: thread_comm_module.c  thread_comm_module.h
src/xml/: xml_parser_module.c  xml_parser_module.h
test/: test_concurrent_client.c  test_concurrent_client_win.c  test_config_parser.c  test_http_client.c  test_logger_multithread.c  test_memory_pool.c
